# Dissectify

./: .gitignore  Dissectify.command  README.md  pyproject.toml
collectors_live/: CodeIntegrity.yaml  Hardware.yaml  KernelModules.yaml  Launchd.yaml  LogStats.yaml  MDM.yaml  Mounts.yaml  Network.yaml  Packages.yaml  Power.yaml  Processes.yaml  SecurityPosture.yaml  Sessions.yaml  USB.yaml
guide/: GUIDE.yaml  GUIDE_SCHEMA.md
plugins/: accounts.py  addressbook.py  biome.py  chromium.py  cookies.py  facetime.py  firefox.py  imessage.py  interactions.py  kext.py  keychain.py  knowledgec.py  launchpad.py  logs.py  notes.py  notifications.py  powerlogs.py  safari.py  savedstate.py  sharedfilelist.py  shellhistory.py  softwareupdate.py  spotlightshortcuts.py  utmpx.py
src/macos_ir/: __init__.py  __main__.py  app.py  config.py  guide.py  health.py  plugins.py  search.py  workbook.py
